<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wifi_config_bg">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_hotspot_name"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/app_common_device_hotspot_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/app_common_hint_hotspot_name"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_hotspot_password"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/app_common_device_hotspot_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/app_common_hint_hotspot_pwd"
            android:textSize="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/app_common_next_step"
            android:onClick="onClickNext"/>

    </LinearLayout>

</RelativeLayout>