<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wifi_config_bg"
    android:orientation="vertical" >

    <ezviz.ezopensdkcommon.common.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/device_unsupport_5g_wifi"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:lineSpacingExtra="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputlayout_bg"
            android:padding="12dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_wifi_net"
                android:textColor="@color/common_text"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:id="@+id/tvSSID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/auto_wifi_ssid"
                android:singleLine="true"
                android:textColor="@color/common_text"
                android:textSize="@dimen/title_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputlayout_bg"
            android:padding="12dp" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password_tv_txt"
                android:textColor="@color/common_text"
                android:textSize="@dimen/title_text_size" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:inputType="text"
                android:maxLength="64"
                android:singleLine="true"
                android:textColor="@color/common_text"
                android:textSize="@dimen/title_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_selector"
            android:text="@string/next_button_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/tab_text_size" />
    </LinearLayout>

</LinearLayout>