<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.videogo.test.InterfaceTestActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|top">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/interface_test_editText"
                    android:hint="@string/interface_test_hint_input_serial"/>

                <Button
                    android:text="@string/ez_32_api_test"
                    android:id="@+id/interface_test_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/interface_call_btn_selector"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text_size"
                    android:onClick="onClick"
                    />
                <Button
                    android:text="@string/interface_test_v33_api"
                    android:id="@+id/interface_v33_test_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/interface_call_btn_selector"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text_size"
                    android:onClick="onClick"
                    />
                <Button
                    android:text="@string/interface_test_openCloudPage"
                    android:id="@+id/id_interface_test_openCloudPage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/interface_call_btn_selector"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text_size"
                    android:onClick="onClick"
                    />
                <Button
                    android:text="forget password"
                    android:id="@+id/id_interface_test_forgetPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/interface_call_btn_selector"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text_size"
                    android:onClick="onClick"
                    />
                <Button
                    android:text="@string/interface_test_show_limit_dialog"
                    android:id="@+id/id_show_stream_limit_dialog"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/interface_call_btn_selector"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text_size"
                    android:onClick="onClick"
                    />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
